--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build": "npm run build:frontend && npm run build:backend",
     "build:frontend": "cd frontend && npm run build",
     "build:backend": "cd backend && npm run build",
-    "install:all": "npm install && cd frontend && npm install && cd ../backend && npm install"
+    "install:all": "npm install && cd frontend && npm install && cd ../backend && npm install",
+    "validate": "node validate-deps.js",
+    "check": "npm run validate"
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
