--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -2,10 +2,10 @@
 # Copy this file to .env and update the values as needed
 
 # API Configuration
-VITE_API_URL=http://localhost:3001/api
+VITE_API_URL=http://localhost:3000/api
 
 # App Configuration
-VITE_APP_NAME="Train at Trails"
+VITE_APP_NAME="BVisionRY Lighthouse"
 VITE_APP_VERSION="1.0.0"
 
 # Development Configuration
