Adding Link Icon to Self Learning Links

--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "check": "npm run validate"
   },
   "devDependencies": {
+    "@types/react": "^19.1.10",
     "concurrently": "^8.2.2"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^7.0.0",
+    "@fortawesome/free-solid-svg-icons": "^7.0.0",
+    "@fortawesome/react-fontawesome": "^0.2.3",
     "axios": "^1.11.0"
   }
 }
