Change Database Connection to PostgreSQL and Migrate the Data from the Database file to PostgreSQL Database

--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,8 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "node-cron": "^3.0.3",
-    "node-fetch": "^2.7.0"
+    "node-fetch": "^2.7.0",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
