Email Service Creating

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,17 +1,32 @@
-# Database
-DATABASE_URL="postgresql://username:password@localhost:5432/train_at_trails"
+# Database Configuration
+DATABASE_URL="file:./dev.db"
 
-# JWT
+# JWT Configuration
 JWT_SECRET="your-super-secure-jwt-secret-key-change-this-in-production"
-JWT_EXPIRES_IN="7d"
 
-# Server
+# Server Configuration
 PORT=3000
-NODE_ENV="development"
+NODE_ENV=development
 
-# Admin
+# Admin User Configuration (for seeding)
 ADMIN_EMAIL="admin@trainattrails.com"
 ADMIN_PASSWORD="admin123"
 
-# Question Release Schedule
+# Game Configuration
 QUESTION_RELEASE_INTERVAL_HOURS=48
+
+# Email Configuration (Gmail SMTP)
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=your-email@gmail.com
+SMTP_PASS=your-gmail-app-password
+SMTP_FROM_EMAIL=your-email@gmail.com
+SMTP_FROM_NAME="Train at Trails"
+
+# Frontend URL (for email links)
+FRONTEND_URL=http://localhost:5173
+
+# Optional: Additional Email Settings
+# SMTP_TIMEOUT=10000
+# SMTP_CONNECTION_TIMEOUT=10000
