--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@prisma/client": "^5.7.1",
     "@types/multer": "^2.0.0",
+    "@types/nodemailer": "^6.4.14",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
@@ -27,6 +28,7 @@
     "multer": "^2.0.2",
     "node-cron": "^3.0.3",
     "node-fetch": "^2.7.0",
+    "nodemailer": "^6.9.8",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
