--- a/backend/.env.example
+++ b/backend/.env.example
@@ -22,7 +22,7 @@ SMTP_SECURE=false
 SMTP_USER=your-email@gmail.com
 SMTP_PASS=your-gmail-app-password
 SMTP_FROM_EMAIL=your-email@gmail.com
-SMTP_FROM_NAME="Train at Trails"
+SMTP_FROM_NAME="BVisionRY Lighthouse"
 
 # Frontend URL (for email links)
 FRONTEND_URL=http://localhost:5173
