--- a/backend/.env.example
+++ b/backend/.env.example
@@ -27,6 +27,9 @@ SMTP_FROM_NAME="BVisionRY Lighthouse"
 # Frontend URL (for email links)
 FRONTEND_URL=http://localhost:5173
 
+# Password Reset Configuration
+RESET_TOKEN_EXPIRY_MINUTES=60
+
 # Optional: Additional Email Settings
 # SMTP_TIMEOUT=10000
 # SMTP_CONNECTION_TIMEOUT=10000
