--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,5 @@
 # Database Configuration
-DATABASE_URL="file:./dev.db"
+DATABASE_URL="postgresql://username:password@localhost:5432/database_name"
 
 # JWT Configuration
 JWT_SECRET="your-super-secure-jwt-secret-key-change-this-in-production"
