--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@fortawesome/fontawesome-svg-core": "^7.0.0",
     "@fortawesome/free-solid-svg-icons": "^7.0.0",
     "@fortawesome/react-fontawesome": "^0.2.3",
-    "axios": "^1.11.0",
-    "sqlite3": "^5.1.7"
+    "axios": "^1.11.0"
   }
 }
