feat: Add EMAIL_BASE_URL for email links in production and update related references

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -27,6 +27,9 @@ SMTP_FROM_NAME="BVisionRY Lighthouse"
 # Frontend URL (for email links)
 FRONTEND_URL=http://localhost:5173
 
+# Email Base URL (for email links in production)
+EMAIL_BASE_URL=http://176.67.56.83:7000
+
 # Password Reset Configuration
 RESET_TOKEN_EXPIRY_MINUTES=60
 
